WebCore: queryCommandState('underline') returns false if the selected text is also bold and italic https://bugs.webkit.org/show_bug.cgi?id=11022

Patch by Ryosuke Niwa <rniwa@webkit.org> on 2009-08-19
Reviewed by Darin Adler.

This patch modifies stateStrikethrough and stateUnderline to use the value -webkit-text-decorations-in-effect
instead of text-decoration.  Because text-decoration only retrieves explicit styling at the node on which
the query was sent, we need to use -webkit-text-decorations-in-effect to include decorations added by ancestors
and also u, s, and strike tags.

Test: editing/style/text-decoration-state.html

* editing/EditorCommand.cpp:
(WebCore::stateStrikethrough): Use -webkit-test-decorations-in-effect instead of text-decoration.
(WebCore::stateUnderline): Ditto.

LayoutTests: queryCommandState('underline') returns false if the selected text is also bold and italic
https://bugs.webkit.org/show_bug.cgi?id=11022

Patch by Ryosuke Niwa <rniwa@webkit.org> on 2009-08-19
Reviewed by Darin Adler.

This patch adds a test to make sure queryCommandState returns correct boolean value for underline and strikethrough.

* editing/style/resources: Added.
* editing/style/resources/TEMPLATE.html: Added.
* editing/style/resources/text-decoration-state.js: Added.
(textdecorationState):
* editing/style/text-decoration-state-expected.txt: Added.
* editing/style/text-decoration-state.html: Added.



Canonical link: https://commits.webkit.org/39127@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47541 268f45cc-cd09-0410-ab3c-d52691b4dbfc